--- a/Jogo Da Velha/index.css
+++ b/Jogo Da Velha/index.css
@@ -1,38 +1,27 @@
-body{
+#jogo {
+    border: black 3px solid;
     width: 100%;
-    height: 100%;
-    display:grid;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    margin: auto
 }
 
-.menu{
-    align-items: center;
-    justify-content: center;
+#jogo>.row {
+    margin: 0;
     display: flex;
-    flex-direction: row;
 }
 
-#jogo{
-    width:603px;
-    height:600px;
-    border: solid 3px black;
-}
- 
-.linha{
-    height:200px;
-    border-bottom:solid 1px;
-}
- 
-.casa{
-    width:200px;
-    height:100%;
-    border-right:solid 1px;
-    float:left;
-    background-image: url('./imgs/branco.jpg');
+#jogo>.row>.col {
+    height: 25vh;
+    width: calc(100% / 3);
+    border: black 1px solid;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
-.casa:hover{
-    cursor: pointer;
+.marcacao_x {
+    background: url("./imgs/x_JogodaVelha01.jpg")
+}
+
+.marcacao_o {
+    background: url("./imgs/o_JogodaVelha02.jpg")
 }
